<resources>
    <string name="app_name">Kesouk</string>
    <string name="login_using">Login with</string>
    <string name="email_addr">E-Mail Address</string>
    <string name="passwordd">Password</string>
    <string name="login">Login</string>
    <string name="remItem">Proceed to selecting slot for remaining items</string>
    <string name="stdItem">Go back to choosing a Standard Delivery slot for all items</string>
    <string name="remember_me">Remember Me</string>
    <string name="register">Register</string>
    <string name="first_time_shopping">First Time Shopping with Us?</string>
     <string name="facebook_app_id">1977128289275301</string>
    <string name="fb_login_protocol_scheme">fb1977128289275301</string>
    <string name="addr1">Address1</string>
    <string name="addr2">Address2</string>
    <string name="area">Area</string>
    <string name="skip">
         <u>Skip</u>
    </string>
    <string name="view_all">
         <u>View All</u>
    </string>
    <string name="fb_text">
         <i>f</i>
    </string>
    <string name="ingred">4 \n mins for cooking

    </string>
    <string name="applink">Terms &amp; Conditions
    <a href="https://play.google.com/store/apps/details?id=zesteve.com.myapplication"></a>
    </string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="nutri">Nutritional Information</string>
    <string name="supplr">Supplier Information</string>
    <string name="nickname">Address Nickname eg.Home/My Office (Optional)</string>
    <string name="house">House No  &amp; Details </string>
    <string name="resident">Residential Complex (Optional)</string>
    <string name="street">Street Name (Optional)</string>
    <string name="landmark">Landmarks (Optional)</string>
    <string name="default_addr">Make this my default address</string>
    <string name="save">Save</string>
    <string name="addaddr">ADD ADDRESS</string>
    <string name="addaddr1">ADD NEW ADDRESS</string>
    <string name="no_items_basket">Your Basket is Empty</string>
    <string name="my_acc">My Account</string>
    <string name="my_wallet">My Wallet</string>
    <string name="faq">FAQs</string>
    <string name="other_addr">Other Addresses</string>
    <string name="my_orders">My Orders</string>
    <string name="email_id">Email Id</string>
    <string name="dob">Date of Birth (MM/DD/YYYY)</string>
    <string name="landline">Landline Number (Optional)</string>
    <string name="send_offers">Send me Emails on Promotions,Offers and Services</string>
    <string name="default_location">Your Default Delivery Location</string>
    <string name="cart_value">Your cart value is $120 for 10 items.</string>
    <string name="order_delivered_to">Your Order will be delivered to </string>
    <string name="date">Date :</string>
    <string name="time">Time :</string>
    <string name="charge">Charge :</string>
    <string name="cont_pay">Continue to Payment ></string>
    <string name="info">Information</string>
    <string name="popup_text">Note : Based on choosing the Express Delivery for a few items in your basket, the rest of the items will
    arrive in a separate delivery as per the time slot chosen by you.</string>
    <string name="note">Note :</string>
    <string name="expressdel">Express Delivery</string>
    <string name="stnddel">Standard Delivery</string>
    <string name="getexprr">Get Express Delivery</string>
    <string name="expressdelnote">Get 10 out of 11 items within two hours for a charge of kshs 12</string>
    <string name="select_lang">Select Language</string>
    <string name="arabic"> Arabic العربية</string>
    <string name="english">English</string>
    <string name="email_mob">Email/Mobile Number</string>
    <string name="signin">Sign In</string>
    <string name="verify">Verify</string>
    <string name="cancel">Cancel</string>
    <string name="passwd">Password</string>
    <string name="forgot_passwd">Forgot Password?</string>
    <string name="resend_passwd">Resend OTP?</string>
    <string name="or">----------OR----------</string>
    <string name="no_account">Don\'t Have an Account?    </string>
    <string name="signup"> Sign Up</string>
    <string name="otp_text">Please enter the OTP received</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mob">Mobile Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retype_pass">Retype Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="location">Location</string>
    <string name="branch">Branch Name</string>
    <string name="terms">I AGREE THE TERMS OF USE</string>
    <string name="already_member">Already a member ? </string>
    <string name="title_activity_home_">Settings</string>
    <string name="wishlist">My Wishlist</string>
    <string name="changepass">Change Password</string>
    <string name="addr">My Address</string>
    <string name="share">Share</string>
    <string name="rate">Rate Us</string>
    <string name="home">Home</string>
    <string name="category">Categories</string>
    <string name="search">Search</string>
    <string name="favorites">Favourites</string>
    <string name="basket">Basket</string>
    <string name="about">About Us</string>
    <string name="about_dukan">About Dukan</string>
    <string name="contact">Contact Us</string>
    <string name="termscond">Terms &amp; Conditions</string>
    <string name="notify">Notifications</string>
    <string name="order">My Orders</string>
    <string name="assign_pickup">Assign Pickup</string>
    <string name="logout">LogOut</string>
    <string name="reset_passwd_text">Enter your Phone Number to get the OTP</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="deals">Deals</string>
    <string name="see_all">SEE ALL</string>
    <string name="browseCategory">Browse By Category</string>
    <string name="reset_passwd">Reset Password</string>
    <string name="new_passwd">New Password</string>
    <string name="confirm_passwd">Confirm Password</string>
    <string name="reset_email_text">Enter your Email id to get the OTP</string>
    <string name="LH">Low to High</string>
    <string name="HL">High to Low</string>
    <string name="AL">Alphabetic Order</string>
    <string name="go">Go</string>
    <string name="subtotal">Subtotal</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="checkout">Checkout</string>
    <string name="desc">Description</string>
    <string name="no_items">Your Cart is Empty</string>
    <string name="explore_prod">Explore all the Products</string>
    <string name="no_items_wishlist">No items added in your WishList</string>
    <string name="update">Update</string>
    <string name="home_account">Please LogIn to View Profile</string>
    <string name="order_details">Order Details</string>
    <string name="thankyour_text">Thank You for placing the Order</string>
    <string name="order_number">Your Order Number: 12345XYG125</string>
    <string name="receipt">Receipt</string>
    <string name="slno">Sl. No</string>
    <string name="prod_name">Product Name</string>
    <string name="qty">Qty</string>
    <string name="unit">Price/Unit</string>
    <string name="total">Total</string>
    <string name="total_item">Total Item: </string>
    <string name="grand_total">Grand Total: </string>
    <string name="total_saving">Total Savings: </string>
    <string name="continue_shoping">Continue Shopping</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="other_marketprice">Other Super Market: </string>
    <string name="savings">Savings:</string>
    <string name="save_cont">Save And Continue</string>
    <string name="confirm">Confirm</string>
    <string name="add_addr">ADD NEW ADDRESS</string>
    <string name="continue_text">Continue</string>
    <string name="remove">Remove X</string>
    <string name="order_no">Order No</string>
    <string name="order_date">Ordered Date</string>
    <string name="amt">Amount</string>
    <string name="amt1">Amount: </string>
    <string name="status">Status</string>
    <string name="name">Name</string>
    <string name="relationship">Relationship</string>
    <string name="pickdate">Pickup Date</string>
    <string name="order_id">Order ID</string>
    <string name="assign">Assign</string>
    <string name="delivery">Delivery</string>
    <string name="pickup">Pickup</string>
    <string name="seller">Seller</string>
    <string name="store">Store</string>
    <string name="branch_title">Branch</string>
    <string name="pickuptiming">PickUp Timing: </string>
    <string name="order_history">Order History</string>
    <string name="feedback">Feedback</string>
    <string name="orderdate">Order Date</string>
    <string name="deliveryMethod">Delivery Method</string>
    <string name="itemno">Item No:  </string>
    <string name="quantity">Quantity:  </string>
    <string name="vat">Vat:  </string>
    <string name="total_amt">Total Amount:  </string>
    <string name="cust_name">Customer Name</string>
    <string name="pickuptime">Pickup Time</string>
    <string name="dev_pickuptime">Delivery/Pickup Time</string>
    <string name="loc_details">Location Details</string>
    <string name="terms_agree">I Agree Terms &amp; Conditions</string>
    <string name="getintouch">GET IN TOUCH</string>
    <string name="your_msg">Your message...</string>
    <string name="opinion">Your opinion matter to us</string>
    <string name="nothanks">No Thanks</string>
    <string name="status_update">Your Status has been Updated Successfully</string>
    <string name="logout_screen">Are you sure you want to Logout</string>
    <string name="about_us">"Shop" is a chain of saudi retail stores offering high quality products at discounted and competitive prices, includes a bouquet. Our products are food and non - food commodities of excellent value that meet the needs of the whole family. The jeddah boutique chain is based in jeddah and is seeking to expand throughout the kingdom and the region to become closer to wherever you are. You are offered to offer you the best value, every day</string>
    <string name="ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at bibendum est. Vivamus arcu turpis, congue eu feugiat non, luctus at lacus. Nulla vulputate, sem eget euismod tincidunt, arcu eros suscipit leo, facilisis cursus ex orci non nisi. Aliquam tincidunt ex quis justo tincidunt hendrerit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut laoreet dictum arcu eget feugiat. Proin ex urna, convallis vitae eros nec, blandit porttitor urna. Maecenas interdum feugiat ex, id molestie enim aliquam vel.</string>
    <string name="terms_text">Innovative Retail Concepts Pvt Ltd (“IRCPL”) is the licensed owner of the brand dukan app from Supermarket Grocery Supplies Pvt Ltd (“SGSPL”). IRCPL respects your privacy. This terms provides succinctly the manner your data is collected and used by IRCPL on the Site. As a visitor to the Site/ Customer you are advised to please read the terms carefully. By accessing the services provided by the Site you agree to the collection and use of your data by IRCPL in the manner provided in this terms.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
</resources>