<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_green"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/logo_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_30"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/splash_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/logo" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_layout"
            android:layout_marginTop="@dimen/padding_30"
            android:gravity="center_horizontal"
            android:text="@string/login_using"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/padding_15"
            android:id="@+id/login_with_text"/>
        <LinearLayout
            android:id="@+id/social_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_10"
            android:layout_marginRight="@dimen/padding_10"
            android:layout_marginTop="@dimen/padding_10"
            android:orientation="horizontal"
            android:layout_below="@+id/login_with_text"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:weightSum="2">
          <!--  <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                style="@style/FacebookLoginButton"

                />-->
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:paddingTop="15dp"
                android:id="@+id/fb_button"
                android:drawableTop="@drawable/fb_icon"
                android:gravity="center"
                android:layout_marginRight="10dp"
                android:background="@drawable/facebook_background"
                android:layout_weight="1"/>

          <!--  <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:layout_weight="1"
                android:background="@drawable/facebook_background"


                />-->
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:paddingTop="17dp"
                android:id="@+id/g_button"
                android:drawableTop="@drawable/g_plus"
                android:gravity="center"
                android:background="@drawable/google_background"
                android:layout_weight="1"/>


</LinearLayout>
        <EditText
            android:id="@+id/email_edittxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:padding="@dimen/activity_horizontal_margin"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/email_addr"
            android:layout_below="@+id/social_login_layout"
            android:drawableLeft="@drawable/username_icon"
            android:drawablePadding="@dimen/padding_5"
            android:layout_marginLeft="@dimen/padding_10"
            android:layout_marginRight="@dimen/padding_10"
            android:background="@drawable/border_white"
            android:inputType="textEmailAddress"
           />

        <EditText
            android:id="@+id/passwd_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:padding="@dimen/activity_horizontal_margin"
            android:singleLine="true"
            android:textColor="@color/white"
            android:hint="@string/passwordd"
            android:layout_below="@+id/email_edittxt"
            android:drawableLeft="@drawable/password_icon"
            android:drawablePadding="@dimen/padding_5"
            android:layout_marginLeft="@dimen/padding_10"
            android:layout_marginRight="@dimen/padding_10"
            android:background="@drawable/border_white"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/padding_30"
            android:textColorHint="@color/white"

            />



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwd_text"
            android:layout_marginLeft="@dimen/padding_10"
            android:layout_marginRight="@dimen/padding_10"
            android:id="@+id/rem_forgot_layout"
            android:layout_marginTop="@dimen/padding_30"

            >

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox1"
                android:buttonTint="@color/white"


                />
            <TextView
                android:id="@+id/remeber_me1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/remember_me"
                android:textColor="@color/white"
                android:textSize="@dimen/padding_15"
                android:layout_toRightOf="@+id/checkbox1"
                android:layout_marginLeft="@dimen/padding_10"
                android:layout_marginTop="@dimen/padding_5"


                />

            <TextView
                android:id="@+id/forgot_pass1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/forgot_passwd"
                android:textColor="@color/white"
                android:textSize="@dimen/padding_15"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/padding_5"

                />



        </RelativeLayout>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding30"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/login"
            android:textSize="@dimen/padding_20"
            android:textColor="@color/black"
            android:background="@drawable/round_button"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_below="@id/rem_forgot_layout"

            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@+id/login_btn"
            android:gravity="bottom"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_30"
                android:gravity="center_horizontal"
                android:text="@string/first_time_shopping"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/padding_15"
                android:id="@+id/first_shopping"/>
            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding30"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:gravity="center_horizontal"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/register"
                android:textSize="@dimen/padding_20"
                android:textColor="@color/black"
                android:background="@drawable/round_button"
                android:layout_marginLeft="@dimen/padding_90"
                android:layout_marginRight="@dimen/padding_90"
                android:layout_below="@id/first_shopping"


                />
        </RelativeLayout>




    </RelativeLayout>
</ScrollView>