<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/logo_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/splash_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/logo" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_layout"
            android:layout_marginTop="@dimen/padding_5"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/padding_20"
            android:id="@+id/kesouk"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kesouk"
            android:layout_marginTop="@dimen/padding_10"
            android:gravity="center_horizontal"
            android:text="Kenya's Premium Online Supermarket"
            android:textColor="@color/dark_green"
            android:textSize="@dimen/padding_20"
            android:id="@+id/kenya_market"/>
        <LinearLayout
            android:id="@+id/logo1_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_5"
            android:layout_below="@+id/kenya_market"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/navigation_image" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/logo1_layout"
            android:gravity="center"

            >
            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_10"
                android:layout_marginTop="@dimen/padding_10"
                android:gravity="center_horizontal"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/login"
                android:textSize="@dimen/padding_20"
                android:textColor="@color/white"
                android:background="@drawable/round_button_brown"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textStyle="bold"


                />
            <Button
                android:id="@+id/reg_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_10"
                android:layout_marginTop="@dimen/padding_5"
                android:gravity="center_horizontal"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/register"
                android:textSize="@dimen/padding_20"
                android:textColor="@color/white"
                android:background="@drawable/round_button_brown"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_below="@id/login_btn"
                android:textStyle="bold"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reg_btn"
                android:layout_marginTop="@dimen/padding_10"
                android:gravity="center_horizontal"
                android:text="@string/skip"
                android:textColor="@color/black"
                android:textSize="@dimen/padding_20"
                android:id="@+id/skip"/>


        </LinearLayout>

    </RelativeLayout>
