<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/padding_20"
        android:paddingTop="@dimen/padding_50"
        android:id="@+id/temns_text"
        android:text="@string/terms_text"


        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/padding_30"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding30"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:gravity="center_horizontal"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/decline"
                android:textSize="@dimen/padding_20"
                android:textColor="@color/white"
                android:id="@+id/decline_button"
                android:paddingTop="@dimen/padding_50"
                android:layout_marginLeft="@dimen/padding_5"
                android:layout_marginRight="@dimen/padding_5"
                android:background="@color/tab_line"
                android:paddingBottom="@dimen/padding_50"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding30"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:gravity="center_horizontal"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/accept"
                android:textSize="@dimen/padding_20"
                android:textColor="@color/white"
                android:id="@+id/agree_button"
                android:paddingTop="@dimen/padding_50"
                android:layout_marginLeft="@dimen/padding_5"
                android:layout_marginRight="@dimen/padding_5"
                android:background="@color/dark_green"
                android:paddingBottom="@dimen/padding_50"

                />
        </LinearLayout>
    </LinearLayout>




</LinearLayout>
    </ScrollView>